[package]
name = "grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
http = "1.1.0"
pest = { version = "2.7.11", features = ["pretty-print"] }
pest_derive = "2.7.11"
regex = "1.10.5"
winnow = { version = "0.6.16", features = ["simd"] }
